# sqa-lab3

./: LICENSE  Makefile  README.md  pyproject.toml
mutants/: mutmut-stats.json  pyproject.toml
mutants/src/activity_4/original/: rover.py  test_rover.py
src/activity_1/: max_of_three_numbers.py  test_max_of_three_numbers.py
src/activity_2/: main.py  test_main.py
src/activity_3/: annotated_code.py  original_code.py  test_annotated_code.py
src/activity_4/: original.py  test_original.py
src/activity_4/mutants/: rover_mutant_1.py  rover_mutant_2.py  rover_mutant_3.py  rover_mutant_4.py  rover_mutant_5.py
src/activity_4/original/: rover.py  test_rover.py
src/activity_4/tests/: test_rover.py
src/activity_5/: Calculator.java  CalculatorTest.java  Dockerfile  pom.xml
src/activity_5/main/java/com/example/: Calculator.java
src/activity_5/test/java/com/example/: CalculatorTest.java
