[project]
name = "sqa-lab3"
version = "0.1.0"
description = ""
authors = [
    {name = "ffekirnew",email = "ffekirnew0808@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "mutmut (>=3.3.0,<4.0.0)",
    "mutpy (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.mutmut]
paths_to_mutate = [ "src/activity_4/original/" ]
tests_dir = [ "src/activity_4/tests/" ]
